# Confidant

./: .gitignore  .pre-commit-config.yaml  README.md  aggregator.py  chatbot.py  cli.py  config.py  config.yaml  converter.py  file_system_utils.py  grouper.py  main.py  pyproject.toml  sorter.py  test_config.py  transcriber.py
.github/workflows/: codeql.yml
src/confidant/: aggregator.py  config.py  converter.py  file_system_utils.py  main.py  sorter.py  transcriber.py
tests/unit/: test_sorter.py  test_transcriber.py
