[project]
name = "confidant"
version = "0.1.0"
description = "Privacy-centric utilities to manage voice recordings "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "torch>=2.6.0",
    "wakeonlan>=3.1.0",
    "whisperx>=3.3.1",
]

[project.scripts]
deleteme = "confidant:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3.5",
]
